--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{ env.AWS_REGION }}
-          role-to-assume: arn:aws:iam::976193224554:role/github-action-oidc
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: githuboidctest
