--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
           role-session-name: githuboidctest
 
   post-build:
-    #needs: pre-build
+    needs: pre-build
     permissions:
       id-token: write
       contents: read
