--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,6 +21,7 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
