--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,8 +1,8 @@
 name: CI-CD
 
-concurrency:
-  group: dev
-  cancel-in-progress: true
+# concurrency:
+#   group: dev
+#   cancel-in-progress: true
 
 on:
   workflow_dispatch:
@@ -21,7 +21,7 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
-    environment: dev
+    #environment: dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
