--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,8 +1,4 @@
-name: CI-CD
-#You can also use cancel-in-progress to cancel any currently running job or workflow in the same concurrency group
-# concurrency:
-#   group: dev
-#   cancel-in-progress: true
+name: CI/CD for ECS application
 
 on:
   workflow_dispatch:
@@ -39,9 +35,26 @@ jobs:
       - name: Mask AWS Account ID
         run: echo "::add-mask::${{ secrets.AWS_ACCOUNT_ID }}"
 
+  ecr-push:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Assume OIDC role
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-session-name: githuboidctest
+      - name: Mask AWS ROLE ARN
+        run: echo "::add-mask::${{ secrets.AWS_ROLE_ARN }}"
+        
+      - name: Mask AWS Account ID
+        run: echo "::add-mask::${{ secrets.AWS_ACCOUNT_ID }}"
+        
       - name: Login to Amazon ECR
         run: |
           aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+
       - name: Build and Push Docker Image
         run: |
           docker build -t ${{ env.IMAGE_REPO_NAME }}:${{ env.IMAGE_TAG }} .
