--- a/.github/workflows/user-input.yml
+++ b/.github/workflows/user-input.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
       - name:  add numbers
         id: sum
-        run: echo "::set-output name=sum::$((${{ input.number1 }}+${{ input.number2 }}))
+        run: echo "::set-output name=sum::$((${{ inputs.number1 }}+${{ inputs.number2 }}))
 
       - name: display sum
-        run: echo "The sum of ${{ input.number1 } and ${{ input.number2 }} is ${{stepss.outputs.sum}}"
+        run: echo "The sum of ${{ inputs.number1 } and ${{ inputs.number2 }} is ${{stepss.outputs.sum}}"
         
        
