--- a/.github/workflows/user-input.yml
+++ b/.github/workflows/user-input.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name:  add numbers
         id: sum
-        run: echo "::set-output name=sum::$((${{ inputs.number1 }}+${{ inputs.number2 }}))
+        run: echo "::set-output name=sum::$((${{ inputs.number1 }} + ${{ inputs.number2 }}))"
 
       - name: display sum
         run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{steps.outputs.sum}}"
