--- a/.github/workflows/user-input.yml
+++ b/.github/workflows/user-input.yml
@@ -21,6 +21,6 @@ jobs:
         run: echo "::set-output name=sum::$((${{ inputs.number1 }} + ${{ inputs.number2 }}))"
 
       - name: display sum
-        run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{steps.outputs.sum}}"
+        run: echo "The sum of ${{ inputs.number1 }} and ${{ inputs.number2 }} is ${{steps.sum.outputs.sum}}"
         
        
