--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,7 +54,7 @@ jobs:
           
       - name: Upload File to S3
         run: |
-          aws s3 cp test.txt arn:aws:s3:::devops-artifact-bkt/test.txt
+          aws s3 cp test.txt s3://devops-artifact-bkt/test.txt
           
   ecr-push:
     runs-on: ubuntu-latest
