--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           aws sns publish \
             --region $AWS_REGION \
-            --topic-arn $SNS_TOPIC_ARN \
+            --topic-arn ${{ secrets.SNS_TOPIC_ARN }} \
             --message "GitHub Actions Build Started for Repository: ${{ github.repository }} on Branch: ${{ github.ref }} by ${{ github.actor }}" \
             --subject "GitHub Actions"
   build:
