--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,15 +27,16 @@ jobs:
           
       - name: Notify SNS on Build Start
         run: |
-          aws sns publish \
+          aws sns publish 
             --region $AWS_REGION \
             --topic-arn ${{ secrets.SNS_TOPIC_ARN }} \
             --message "GitHub Actions Build Started for Repository: ${{ github.repository }} on Branch: ${{ github.ref }} by ${{ github.actor }}" \
             --subject "GitHub Actions"
   build:
-    permissions:
-      contents: read
+    #permissions:
+      #contents: read
     runs-on: ubuntu-latest
+    needs: notify-start
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
