--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
       
       - name: Notify SNS on Build Start
         run: |
-          aws sns publish \
+          aws sns publish 
             --region $AWS_REGION \
             --topic-arn ${{ secrets.SNS_TOPIC_ARN }} \
             --message "GitHub Actions Build Started for Repository: ${{ github.repository }} on Branch: ${{ github.ref }} by ${{ github.actor }}" \
