--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -75,8 +75,8 @@ jobs:
 
       - name: Update ECS service
         env:
-          CLUSTER_NAME: ${{ secrets.ECS_CLUSTER } 
-          SERVICE_NAME: ${{ secrets.ECS_SERVICE }
+          CLUSTER_NAME: ${{ secrets.ECS_CLUSTER }}
+          SERVICE_NAME: ${{ secrets.ECS_SERVICE }}
         run: |
           aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
 
