--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -90,9 +90,10 @@ jobs:
           role-session-name: githuboidctest
       - name: Update ECS service
         run: |
-          CLUSTER_NAME: ${{ secrets.ECS_CLUSTER }}
-          SERVICE_NAME: ${{ secrets.ECS_SERVICE }}
+          CLUSTER_NAME=${{ secrets.ECS_CLUSTER }}
+          SERVICE_NAME=${{ secrets.ECS_SERVICE }}
           aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
+
 
   # notify-success:
   #   runs-on: ubuntu-latest
