--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -88,17 +88,15 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: githuboidctest
-      - name: Update ECS service
+      - name: Mask Cluster and Service Name and update the ECS
         run: |
-          CLUSTER_NAME=${{ secrets.ECS_CLUSTER }}
-          SERVICE_NAME=${{ secrets.ECS_SERVICE }}
-          aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
+          echo "::add-mask::${{ secrets.CLUSTER_NAME }}"
+          echo "::add-mask::${{ secrets.SERVICE_NAME }}"
 
-      - name: Mask AWS ROLE ARN
-        run: echo "::add-mask::${{ secrets.ECS_CLUSTER }}"
-        
-      - name: Mask AWS Account ID
-        run: echo "::add-mask::${{ secrets.ECS_SERVICE }}"
+      - name: Force New Deployment on ECS
+        run: |
+          aws ecs update-service --cluster ${{ secrets.CLUSTER_NAME }} --service ${{ secrets.SERVICE_NAME }} --force-new-deployment
+
 
 
   # notify-success:
