--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -91,21 +91,21 @@ jobs:
           
       - name: Debug Variables
         run: |
-          echo "CLUSTER_NAME: '${{ secrets.CLUSTER_NAME }}'"
-          echo "SERVICE_NAME: '${{ secrets.SERVICE_NAME }}'"
-          if [[ -z "${{ secrets.CLUSTER_NAME }}" || -z "${{ secrets.SERVICE_NAME }}" ]]; then
+          echo "CLUSTER_NAME: '${{ secrets.ECS_CLUSTER }}'"
+          echo "SERVICE_NAME: '${{ secrets.ECS_SERVICE }}'"
+          if [[ -z "${{ secrets.ECS_CLUSTER }}" || -z "${{ secrets.ECS_SERVICE }}" ]]; then
             echo "Error: Missing required environment variables!"
             exit 1
           fi
 
       - name: Mask Secrets
         run: |
-          echo "::add-mask::${{ secrets.CLUSTER_NAME }}"
-          echo "::add-mask::${{ secrets.SERVICE_NAME }}"
+          echo "::add-mask::${{ secrets.ECS_CLUSTER }}"
+          echo "::add-mask::${{ secrets.ECS_SERVICE }}"
 
       - name: Force New Deployment on ECS
         run: |
-          aws ecs update-service --cluster "${{ secrets.CLUSTER_NAME }}" --service "${{ secrets.SERVICE_NAME }}" --force-new-deployment
+          aws ecs update-service --cluster "${{ secrets.ECS_CLUSTER }}" --service "${{ secrets.ECS_SERVICE }}" --force-new-deployment
 
 
   # notify-success:
