--- a/.github/workflows/multi-branch-deployment.yml
+++ b/.github/workflows/multi-branch-deployment.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches:
-       # - main
       - paramesh-dev
+
 env:
   AWS_REGION: "us-east-1"
 
@@ -22,8 +22,9 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: githuboidctest
+
   s3-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: checkout
     permissions:
       id-token: write
@@ -46,7 +47,14 @@ jobs:
         run: |
           aws s3 cp test.txt s3://devops-artifact-bkt/test.txt
 
+      - name: Count Files in Instance
+        shell: bash
+        run: |
+          FILE_COUNT=$(find /home/ubuntu -type f | wc -l)
+          echo "Total number of files in /home/ubuntu: $FILE_COUNT"
+      
       - name: Deploy Based on Branch
+        shell: bash
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "Deploying to Production..."
@@ -56,4 +64,3 @@ jobs:
             # Add dev deployment commands here
           else
             echo "No deployment for this branch."
-        shell: bash
