--- a/.github/workflows/ec2-deployment.yml
+++ b/.github/workflows/ec2-deployment.yml
@@ -1,7 +1,7 @@
 name: Manual Build and Deploy
 
 on:
-  workflow_dispatch:  # Allows manual triggering
+  #workflow_dispatch:  # Allows manual triggering
   push:
     branches:
       - ec2-deploy
