--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -1,7 +1,7 @@
 name: CI/CD for ECS application main branch
 
 on:
-  #workflow_dispatch:
+  workflow_dispatch:
   push:
     branches:
       - main 
