--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,9 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "paramesh-dev" ]
+ workflow_dispatch:
+ push:
+   branches: [ "paramesh-dev" ]
 
 
 jobs:
