--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -47,12 +47,12 @@ jobs:
       
       - name: Get Parameters from SSM
         run: |
-          echo "IMAGE_REPO_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecrname" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$(aws ssm get-parameter --name "/GithubAction/demo/Tag/Imagetag" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
-          echo "AWS_ACCOUNT_ID=$(aws ssm get-parameter --name "/GithubAction/demo/Account/Accountid" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
-          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
-          echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
-          echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text)" >> $GITHUB_ENV
+          echo "IMAGE_REPO_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecrname" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$(aws ssm get-parameter --name "/GithubAction/demo/Tag/Imagetag" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "AWS_ACCOUNT_ID=$(aws ssm get-parameter --name "/GithubAction/demo/Account/Accountid" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "ECS_CLUSTER=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
+          echo "ECS_SERVICE=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text --region us-east-1)" >> $GITHUB_ENV
       
       - name: Login to Amazon ECR
         run: |
