--- a/.github/workflows/ecs-deployment.yml
+++ b/.github/workflows/ecs-deployment.yml
@@ -112,3 +112,51 @@ jobs:
           
           echo "Restoring desired count to $desired_task_count"
           aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --desired-count $desired_task_count
+          #Compares ECS Task image SHA with the latest ECR image SHA#
+          
+          "ECR_REPO_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecrname" --query "Parameter.Value" --output text)"
+          "AWS_REGION=$(aws ssm get-parameter --name "/GithubAction/demo/Region/Awsregion" --query "Parameter.Value" --output text)" 
+          "ECS_CLUSTER_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Reponame/Ecscluster" --query "Parameter.Value" --output text)" 
+          "ECS_SERVICE_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Servicename/Ecsservice" --query "Parameter.Value" --output text)"
+          "CONTAINER_NAME=$(aws ssm get-parameter --name "/GithubAction/demo/Container/Containername" --query "Parameter.Value" --output text)"
+      
+          echo "Fetching latest image SHA from ECR"
+          LATEST_IMAGE_SHA=$(aws ecr describe-images --repository-name $ECR_REPO_NAME \
+           --query 'sort_by(imageDetails,&imagePushedAt)[-1].imageDigest' --output text --region $AWS_REGION)
+      
+          if [[ -z "$LATEST_IMAGE_SHA" || "$LATEST_IMAGE_SHA" == "None" ]]; then
+            echo "❌ Error: Unable to fetch latest image SHA from ECR"
+          exit 1
+          fi
+      
+          echo "✅ Latest image SHA from ECR: $LATEST_IMAGE_SHA"
+      
+          echo "Fetching running ECS task ARN"
+          TASK_ARN=$(aws ecs list-tasks --cluster $ECS_CLUSTER_NAME --service-name $ECS_SERVICE_NAME \
+           --query 'taskArns[0]' --output text --region $AWS_REGION)
+      
+          if [[ -z "$TASK_ARN" || "$TASK_ARN" == "None" ]]; then
+           echo "❌ Error: No running tasks found in ECS service!"
+          exit 1
+          fi
+      
+          echo "✅ Running ECS Task ARN: $TASK_ARN"
+      
+          echo "Fetching running ECS Task image SHA from container"
+          RUNNING_IMAGE_SHA=$(aws ecs describe-tasks --cluster $ECS_CLUSTER_NAME --tasks $TASK_ARN \
+           --query "tasks[0].containers[?name=='$CONTAINER_NAME'].imageDigest" --output text --region $AWS_REGION)
+      
+          if [[ -z "$RUNNING_IMAGE_SHA" || "$RUNNING_IMAGE_SHA" == "None" ]]; then
+           echo "❌ Error: Unable to fetch image digest from running ECS Task!"
+          exit 1
+          fi
+      
+          echo "✅ Running image SHA from ECS Task: $RUNNING_IMAGE_SHA"
+      
+          if [[ "$LATEST_IMAGE_SHA" == "$RUNNING_IMAGE_SHA" ]]; then
+            echo "✅ Success: ECS task is using the latest image!"
+          exit 0
+          else
+            echo "❌ Failure: ECS task is NOT using the latest image!"
+          exit 1
+          fi
